@@ -2305,3 +2305,13 @@ g_strip_context
 <SUBSECTION>
 g_get_language_names
 </SECTION>
+
+<SECTION>
+<TITLE>Base64 Encoding</TITLE>
+<FILE>base64</FILE>
+g_base64_encode_step
+g_base64_encode_close
+g_base64_encode
+g_base64_decode_step
+g_base64_decode
+</SECTION>
