@@ -28,22 +28,22 @@ G_BEGIN_DECLS
 gsize   g_base64_encode_step  (const guchar *in,
 			       gsize         len,
 			       gboolean      break_lines,
-			       char         *out,
-			       int          *state,
-			       int          *save);
+			       gchar        *out,
+			       gint         *state,
+			       gint         *save);
 gsize   g_base64_encode_close (gboolean      break_lines,
-			       char         *out,
-			       int          *state,
-			       int          *save);
-char *  g_base64_encode       (const guchar *data,
-			       gsize         len);
-gsize   g_base64_decode_step  (const char   *in,
+			       gchar        *out,
+			       gint         *state,
+			       gint         *save);
+gchar*  g_base64_encode       (const guchar *data,
+			       gsize         len) G_GNUC_MALLOC;
+gsize   g_base64_decode_step  (const gchar  *in,
 			       gsize         len,
 			       guchar       *out,
-			       int          *state,
+			       gint         *state,
 			       guint        *save);
-guchar *g_base64_decode       (const char   *text,
-			       gsize        *out_len);
+guchar *g_base64_decode       (const gchar  *text,
+			       gsize        *out_len) G_GNUC_MALLOC;
 
 G_END_DECLS
 
