@@ -107,9 +107,9 @@ g_on_error_stack_trace
 #if IN_FILE(__G_BASE64_C__)
 g_base64_encode_step
 g_base64_encode_close
-g_base64_encode
+g_base64_encode G_GNUC_MALLOC
 g_base64_decode_step
-g_base64_decode
+g_base64_decode G_GNUC_MALLOC
 #endif
 #endif
 
